# tp-TallerDeProgramacion-grupo5

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  compile_commands.json  installer.sh  liberty_city.json  taller_client  taller_editor  taller_server  taller_tests
client/: CMakeLists.txt  Makefile  audio_manager.cpp  audio_manager.h  camera.cpp  camera.h  car.cpp  car.h  carsprites.h  checkpoint.cpp  checkpoint.h  client.cpp  client.h  game_client_handler.cpp  game_client_handler.h  game_client_receiver.cpp  game_client_receiver.h  game_client_sender.cpp  game_client_sender.h  game_connection.cpp  game_connection.h  game_renderer.cpp  game_renderer.h  game_state_tracker.cpp  game_state_tracker.h  input_handler.cpp  input_handler.h  main.cpp  minimap.cpp  minimap.h  player_state_tracker.cpp  player_state_tracker.h  position_update_handler.cpp  position_update_handler.h  render  renderer.h  results_screen.cpp  results_screen.h  test_sdl.cpp  vector2.h
client/SDL2pp/: CMakeLists.txt  Makefile  libSDL2pp.so.8.3.0
client_ui/: CMakeLists.txt  CarSelectionDialog.cpp  CarSelectionDialog.h  ClientConnection.cpp  ClientConnection.h  ConnectDialog.cpp  ConnectDialog.h  ConnectionMenu.cpp  ConnectionMenu.h  GameLauncher.cpp  GameLauncher.h  GameLobbyWindow.cpp  GameLobbyWindow.h  JoinGameWindow.cpp  JoinGameWindow.h  LobbyClient.cpp  LobbyClient.h  MainWindow.cpp  MainWindow.h  NewGameWindow.cpp  NewGameWindow.h  resources.qrc
client_ui/ui/: CarSelectionDialog.ui  ConnectDialog.ui  ConnectionMenu.ui  GameLobbyWindow.ui  JoinGameWindow.ui  MainWindow.ui  NewGameWindow.ui
common/: CMakeLists.txt  Event.h  Player.h  PlayerData.h  car_physics_config.cpp  car_physics_config.h  constants.h  event.cpp  eventDispatcher.cpp  eventDispatcher.h  eventloop.cpp  eventloop.h  game_client_handler.cpp  game_client_handler.h  game_client_receiver.h  game_client_sender.h  gameloop.cpp  gameloop.h  install_paths.h.in  map_layout.cpp  map_layout.h  messages.h  npc_config.cpp  position.h  protocol.cpp  protocol.h  protocol_encode.cpp  protocol_receivers.cpp  protocol_utils.cpp  queue.h  resolver.cpp  thread.h
config/: car_physics.yaml  editor.yaml  npc.yaml
data/cities/: base_liberty_city_checkpoints.json  liberty_city.json  (+12 more)
documentation/: Project Documentation.md
editor/: CMakeLists.txt  checkpoint_data.h  checkpoint_editor_window.cpp  checkpoint_editor_window.h  checkpoint_item.cpp  checkpoint_item.h  editor_config.cpp  editor_config.h  main.cpp  spawn_formation_item.cpp  spawn_formation_item.h
lib/: libgmock.so.1.12.1  libgmock_main.so.1.12.1  libgtest.so.1.12.1  libgtest_main.so.1.12.1
server/: CMakeLists.txt  PlayerData.h  acceptor.cpp  acceptor.h  car_physics_config.cpp  car_physics_config.h  client_handler.cpp  client_handler.h  client_handler_msg.h  client_receiver.cpp  client_receiver.h  client_sender.cpp  client_sender.h  event.cpp  event.h  eventDispatcher.cpp  eventDispatcher.h  eventloop.cpp  eventloop.h  game_event_handler.cpp  game_event_handler.h  game_monitor.cpp  game_monitor.h  game_state.h  gameloop.cpp  gameloop.h  lobby_handler.cpp  lobby_handler.h  main.cpp  map_layout.cpp  map_layout.h  message_admin.cpp  message_admin.h  message_handler.cpp  message_handler.h  messages.h  npc_config.cpp  npc_config.h  outbox_monitor.cpp  outbox_monitor.h  (+4 more)
taller_client_autogen/: deps  moc_predefs.h
tests/: CMakeLists.txt  foo.cpp  test_acceptor_clienthandler.cpp  test_client_communication.cpp  test_full_integration.cpp  test_get_games.cpp  test_lobby_protocol.cpp  test_protocol.cpp
tools/: convert_tiled_parked_cars.py  convert_tiled_waypoints.py
(+29 files in other folders)
